k8s/helm/rabbitmq/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: messaging
  labels:
    name: messaging
