k8s/helm/rabbitmq/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-nodeport
  namespace: messaging
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: rabbitmq
    app.kubernetes.io/name: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
      nodePort: 30672
